# LobsterShell

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml
00_core/: policy_engine.py
01_gateway/: openclaw_compat_gateway.py
05_adapters/: openclaw_adapter.py
SoulArchitectureSummary/: DUAL_DIRECTORY_CONSISTENCY_REPORT.md  SOUL_ARCHITECTURE_SUMMARY.md  「主動思考動態解決問題」.md
SoulArchitectureSummary/LobsterShell/: .gitignore  README.md
SoulArchitectureSummary/LobsterShell/00_core/: audit_logger.py  mode_controller.py
SoulArchitectureSummary/LobsterShell/05_adapters/: openclaw_adapter.py
SoulArchitectureSummary/LobsterShell/cli/: lobster_cli.py
SoulArchitectureSummary/LobsterShell/examples/: wrap_openclaw.py
SoulArchitectureSummary/LobsterShell/tests/: test_core.py
SoulArchitectureSummary/soul_architecture/: KIMI_IMPLEMENTATION_SPEC.md  README.md  audit_chain.py  dynamic_mode_engine.py  layered_security.py  soul_core.py  test_core.py  zero_hallucination_overwriter.py
cli/: lobster_cli.py
core/tool_runtime/: registry.py
docs/: AI_Zero_Hallucination_Principle.md  TriMode_Architecture.md  release_notes_2026-02-20.md
examples/: README.md  microkernel_demo.py
scripts/: one_click_openclaw_compat.sh  restart_openclaw_compat.sh  status_openclaw_compat.sh  stop_openclaw_compat.sh  test_combo.py
shell/: __init__.py
shell/00_core/: __init__.py
shell/05_adapters/: openclaw_adapter.py
shell/core/security/: __init__.py
shell/docs/: SecureClaw_Integration.md
soul/: README.md  SOUL_ARCHITECTURE_SUMMARY.md
soul/soul_architecture/: README.md  SOUL_ARCHITECTURE.md  __init__.py  audit_chain.py  dynamic_mode_engine.py  example_usage.py  layered_security.py  soul_core.py  test_core.py
tests/: test_core.py  test_lobstershell_core.py  test_numeric_module_import_syntax.py
tools/lobster-tool-sql/: manifest.json
(+8 files in other folders)
