[project]
name = "lobstershell"
version = "0.1.0"
description = "極致安全 AI Agent 裝甲 - 為任何 AI Agent 框架提供軍事級安全防護"
authors = [
    {name = "LobsterShell Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "security", "agent", "openclaw", "autogpt", "langchain"]

dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
local-llm = [
    "ollama>=0.1.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/your-org/lobstershell"
Documentation = "https://github.com/your-org/lobstershell#readme"
Repository = "https://github.com/your-org/lobstershell.git"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
